miner: set parents to NULL to avoid segfault if early "goto out"

The symptom from this segfault in the miner is gnome-documents telling
GData dbus timeout (due to service dying without a reply).

parents is freed uninitialized if one of the call to tracker fails
thus setting error to non null, ie goto out before parents is assigned
in account_miner_job_process_entry.

The issue which triggered tracker to return a non null error
disappeared after a run with this fix. I miss a commplete log with
LIBGDATA_DEBUG=7 and G_MESSAGES_DEBUG="Tracker,Gjs,libgdata".

Still the gdb backtrace with GDATA_MINER_PERSIST=1 showed that the error
came from:
 alternate = gdata_entry_look_up_link (entry, GDATA_LINK_ALTERNATE);
  alternate_uri = gdata_link_get_uri (alternate);

  _tracker_sparql_connection_insert_or_replace_triple
    (job->connection,
     job->cancellable, error,
     identifier, resource,
     "nie:url", alternate_uri);

https://bugzilla.gnome.org/show_bug.cgi?id=673858